@@ -1,10 +1,14 @@
 ## Table of contents
 * [General info](#general-info)
+* [Additional info](#additional-info)
 * [Technologies](#technologies)
 * [Author](#author)
 
 ## General info
 My first Java FX Project. It's upgraded traditional Hello Application with `GUI` - Graphic User Interface.
+
+## Additional info
+If you want to run these application you have to install JavaFX plugin and add JavaFX libraries and additionaly before start the application - click `Run Configurations...`, choose `(x)= Arguments` and enter `--module-path "out;C:\Program Files (x86)\Java\javafx-sdk-11.0.2\lib" --add-modules=javafx.controls,javafx.fxml` where **C:\Program Files (x86)\Java\javafx-sdk-11.0.2\lib** its your javafx sdk location. That's all.
 
 ## Technologies
 Project was created with:
